Assets/style.css
#header {
    background-color: rgb(44, 44, 44);
    height: 100px;
    text-align: center;
}

#title {
    color: white;
    padding-top: 1%;
}

.col-3 {
    height: 100vh;
    background-color: rgb(243, 243, 243);
}

#city-search {
    padding-top: 10px;
}

#input {
    width: 60%;
    height: 4%;
}

#btn {
    width: 10%;
    height: 4%;
    background-color:lightblue;
}

#previousSearch {
    width: 100%;
    height: 30px;
    margin-top: 5px;
    margin-bottom: 5px;
}

#cityButton {
    width: 100%;
    height: 10%;
}

#city {
    margin-top: 10px;
    height: 45%;
    border-top: 1px solid grey;
    border-bottom: 1px solid grey;
    border-left: 1px solid grey;
    border-radius: 3px;
    margin-bottom: 20px;
}

.low {
    background-color: green;
    width: 8%;
}

.moderate {
    background-color: yellow;
    width: 8%;
}

.high {
    background-color: orange;
    width: 8%;
}

.severe {
    background-color: red;
    width: 8%;
}

#forecastDisplay {
    display: flex;
    flex-wrap: no-wrap;
    flex-direction: row;
    padding: 3px;
    height: 250px;
}

#forecastIcon {
    display: flex;
    width: 100px;
    height: 100px;
}

#cardContainer {
    margin-right: 10px;
    background-color: lightblue;
    border-radius: 5px;
}

